# ruft

./: Cargo.toml  README.md  build.rs
proto/: ruft.proto
src/: main.rs  raft.rs  ruftp.rs  server.rs
src/client/: ruft_client.rs
src/server/: server.rs
