[package]
name = "ruft"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
log = "0.4"
timer = "0.2.0"
chrono = "0.4"
tokio = { version = "1.10.0", features = ["full"] }
prost = "0.8"
tonic = "0.5.2"

[build-dependencies]
tonic-build = "0.5.2"

[[bin]]
name = "ruft-client"
path = "src/client/ruft_client.rs"